--- a/index.html
+++ b/index.html
@@ -4,9 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Project</title>
+    <style>
+        *{
+            margin: 0;
+        }
+        .head{
+     
+            background: linear-gradient(90deg ,pink , #a6322c);
+        }
+        .head img{
+            clip-path: polygon(0 0, 70% 0%, 100% 0, 100% 70%, 70% 100%, 30% 100%, 0% 70%, 0% 30%);
+            width: 100%;
+            height: 100%;
+        }
+        
+    </style>
 </head>
 <body>
-    <h2>My First Project</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum possimus laudantium aliquid veniam nihil dolorem dicta animi dignissimos praesentium facilis, necessitatibus reprehenderit voluptas, corrupti ad esse dolore accusamus optio porro odio. Voluptates repellendus nam non harum esse minus, similique praesentium inventore! Eos eligendi nobis temporibus neque harum, accusamus voluptates laborum.</p>
+    <div class="head">
+        <img src="images/3d-rendering-cartoon-like-forest.jpg" alt="">
+        <h2>My First Project</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum possimus laudantium aliquid veniam nihil dolorem dicta animi dignissimos praesentium facilis, necessitatibus reprehenderit voluptas, corrupti ad esse dolore accusamus optio porro odio. Voluptates repellendus nam non harum esse minus, similique praesentium inventore! Eos eligendi nobis temporibus neque harum, accusamus voluptates laborum.</p>
+    </div>
 </body>
 </html>
